--- a/myVoicemail/build.gradle
+++ b/myVoicemail/build.gradle
@@ -86,7 +86,7 @@ android {
         // productFlavors block, as shown below.
     }
     lintOptions {
-        checkReleaseBuilds true
+        checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
