--- a/aFileChooser/build.gradle
+++ b/aFileChooser/build.gradle
@@ -8,6 +8,12 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
     }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 
     buildTypes {
         release {
